--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -1,4 +1,4 @@
-header {
+.header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -6,6 +6,6 @@ header {
   width: 90%;
 }
 
-h1 {
+.title {
   font-size: 1.2rem;
 }
